--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/roflmelon/Chattr/issues"
   },
-  "homepage": "https://github.com/roflmelon/Chattr#readme"
+  "homepage": "https://github.com/roflmelon/Chattr#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
