--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
     "framer-motion": "^6.5.1",
+    "jwt-decode": "^3.1.2",
     "graphql": "^16.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
