--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
