--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-link-ws": "^1.0.20",
     "framer-motion": "^6.5.1",
-    "jwt-decode": "^3.1.2",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
